# wulihong-fastapi-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  config.py  docker-compose.yml  justfile  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile
