[tool.poetry]
name = "wulihong-fastapi-template"
version = "0.1.0"
description = ""
authors = ["Alex Sun <1006925066@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.4"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
cython = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
