[project]
name = "wulihong-fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.5.2",
    "toml>=0.10.2",
    "uvicorn[standard]>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "cython>=3.0.11",
    "pre-commit>=3.8.0",
]
